tests/miniJava/neg/005868_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { 0 while ( 0 ) { } } }
